--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Snake game</title>
         </head>
     <body>
-       <canvas id="snake" width="512" height="512"></canvas>
+        <h1>SNAKE GAME</h1>
+        <canvas id="snake" width="512" height="512"></canvas>
     </body>
 </html>
